<?xml version="1.0" encoding="utf-8"?>
<!--Using linear layout with vertical orientation and center gravity -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#FFFFFF"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <!--TextView used for asking which room shape -->
    <TextView
        android:id="@+id/room_shape_text_view"
        android:text="@string/room_shape_text"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <!--Using another LinearLayout for showing buttons in horizontal orientation-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <!--RectangleButton-->
        <Button
            android:id="@+id/rectangle_button"
            android:backgroundTint="#2196F3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/rectangle_button_text" />

        <!--RoundButton-->
        <Button
            android:id="@+id/round_button"
            android:layout_width="wrap_content"
            android:backgroundTint="#2196F3"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/round_button_text" />

        <!--L-ShapeButton-->
        <Button
            android:id="@+id/l_shape_button"
            android:layout_width="wrap_content"
            android:backgroundTint="#2196F3"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/l_shape_button_text" />

    </LinearLayout>

</LinearLayout>
