<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentRectangularRoom">

    <!--TextViews used for measurements -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/rectangle_length_text_view"
            android:text="@string/rectangle_length_text"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/rectangle_length_value"
            android:labelFor="@+id/rectangle_length_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:inputType="numberDecimal" />
        <TextView
            android:id="@+id/rectangle_width_text_view"
            android:text="@string/rectangle_width_text"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/rectangle_width_value"
            android:labelFor="@+id/rectangle_width_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:inputType="numberDecimal" />

        <!--TextView used for output -->
        <TextView
            android:id="@+id/output_text_view"
            android:text="@string/output_text"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>